# immersive-translator-macos

./: .gitignore  README.md
.github/workflows/: release.yml
Sources/ImmersiveTranslator/: App.swift  ClipboardReader.swift  ErrorMessageFormatter.swift  GlossaryParser.swift  HotKeyManager.swift  OCRReader.swift  Onboarding.swift  ScreenSelection.swift  Settings.swift  TranslationClient.swift  TranslationHistoryStore.swift  TranslationPanel.swift  UpdateChecker.swift
contracts/: README.md
immersive-translator-mac/: LICENSE  Package.swift  README.md
immersive-translator-mac/scripts/: check_error_classification.sh  check_hotkey_advisory.sh  check_ocr_paragraph_polisher.sh  check_ocr_reader_layout.sh  check_ocr_selection_guidance.sh  check_provider_presets.sh  check_release_update_security.sh  check_translation_response_error_parser.sh  check_translation_stream_parser.sh  check_translation_wait_status.sh  check_update_manifest.sh
immersive-translator-windows/: .gitignore  README.md  UPDATE-SETUP.md  WINDOWS-SETUP.md  index.html  package-lock.json  package.json
immersive-translator-windows/src/: App.tsx
immersive-translator-windows/src-tauri/: Cargo.toml  tauri.conf.json
immersive-translator-windows/src-tauri/capabilities/: default.json
immersive-translator-windows/src-tauri/examples/: ocr_smoke.rs
immersive-translator-windows/src-tauri/src/: clipboard.rs  history.rs  lib.rs  main.rs  ocr.rs  screenshot.rs  secret_store.rs  translation.rs
scripts/: build_app.sh  check_error_classification.sh  check_glossary_parser.sh  check_history_export.sh  check_ocr_preview_quality.sh  check_ocr_reader_layout.sh  check_provider_connection_body_inspector.sh  check_provider_presets.sh  check_translation_wait_status.sh  package_release.sh
(+34 files in other folders)
